# mp3-tagger

./: Dockerfile  README.md  pyproject.toml  tagger.py
.streamlit/: config.toml
src/: musictagger.py
src/mp3tagger/: analytics.py  core.py  interface.py
src/musictagger/: analytics.py  core.py  interface.py
