[tool.poetry]
name = "musictagger"
version = "0.1.0"
description = ""
authors = ["Jessica Walkenhorst <walkenho@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
streamlit = "^0.71.0"
mp3_tagger = "^1.0"
mutagen = "^1.45.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
