[tool.poetry]
name = "mp3tagger"
version = "0.1.0"
description = ""
authors = ["Jessica Walkenhorst <walkenho@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
streamlit = "^0.81.0"
mutagen = "^1.45.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
flake8-isort = "^4.0.0"
plotly = "^5.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
